@@ -86,4 +86,8 @@ Version 2.0-4
 
 o Palettes from the colorspace package are used by default for stacked plots.
 
+o Fixed bug in handling of typical= argument to effect() (argument was effectively ignored).
+
+o Added Titanic and Wells data sets.
+
 o Small changes.
